# meta

./: CMakeLists.txt
cmake/: FindClang.cmake  FindLLVM.cmake  Findnlohmann_json.cmake  Findspdlog.cmake
core/: CMakeLists.txt
core/include/core/parser/: node.h
core/include/core/parser/nodes/: class.h  forward.h
core/src/parser/: callable.cpp  clang_utils.cpp  class.cpp  enum.cpp  forward.cpp  name_space.cpp  node.cpp  type_info.cpp  variable.cpp
example/: CMakeLists.txt
example/generate_attr/: CMakeLists.txt  generate_attr.cpp  test_class.generated_cpp  test_class.h  test_class_B.generated_cpp
example/generate_behavior/: generate_behavior.cpp
example/generate_component/: entity_base.h  generate_component.cpp
example/generate_decode/: generate_decode.cpp  test_class.h
example/generate_enum/: generate_enum.cpp
example/generate_property/: generate_property.cpp  test_property.h
example/generate_rpc/: generate_rpc.cpp  test_class.h
test/: CMakeLists.txt  type_print.cpp
test/annotation/: annotation_test.cpp
test/attr/: attr_test.cpp
